youfull/objects/ZM_MarketZoneKPIContent__c.object
<CustomObject>
    <fields>
        <fullName>Language_Code__c</fullName>
        <label>Language Code</label>
        <picklist>
            <picklistValues>
                <fullName>ar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>da</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>el</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_PH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es_MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>et</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr_CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>it</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MarketZoneKPIConfig__c</fullName>
        <label>MarketZoneKPIConfig</label>
        <referenceTo>ZM_MarketZoneKPIConfig__c</referenceTo>
        <relationshipLabel>KPI Content</relationshipLabel>
        <relationshipName>KPIContent</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SuggestedActivities__c</fullName>
        <label>SuggestedActivities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>KPI Content</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Content</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>